line render refactoring